Add worker ratings
