# src/rest/v1/openapi.yml
@@ -113,6 +113,8 @@ components:
           type: string
         workerUuid:
           type: string
+        rating:
+          type: number
         shift:
           $ref: '#/components/schemas/Shift'
         worker:
@@ -127,6 +129,19 @@ components:
           type: string
       required:
         - shiftUuid
+    RateWorkerInput:
+      type: object
+      properties:
+        shiftUuid:
+          type: string
+        workerUuid:
+          type: string
+        rating:
+          type: integer
+      required:
+        - shiftUuid
+        - workerUuid
+        - rating
 paths:
   /:
     summary: The application health check
@@ -256,7 +271,7 @@ paths:
               schema:
                 type: object
                 properties:
-                  shifts:
+                  shiftAssignments:
                     type: array
                     items:
                       $ref: '#/components/schemas/Shift'
@@ -287,3 +302,17 @@ paths:
                     type: array
                     items:
                       $ref: '#/components/schemas/Shift'
+  /rate-worker:
+    post:
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/RateWorkerInput'
+      responses:
+        '200':
+          description: Successfully rated a Worker for a Shift
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ShiftAssignment'
